terraform/modules/vpc_mod/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "${ var.vpc_cidr }"
  enable_dns_hostnames = true

  tags {
    Name = "vpc_${ var.env }_${ var.region }"
  }
}
